# cmx-capstone-rest

./: .gitignore  Dockerfile  README.md  default.properties  pyproject.toml  test.properties
.github/workflows/: publish.yml
src/app/: bedrock_client.py  decorators.py  default.py  permissions.py  prod.py  s3client.py  settings.py  test.py  urls.py  views.py
src/app/authentication/: __init__.py  daos.py  models.py  utils.py
src/app/authentication/tests/: authentication.py  daos.py
src/chat/: daos.py  models.py  views.py
src/core/: __init__.py  daos.py  models.py  views.py
src/migrations/: 0001_create_auth_integration_table.py  0002_create_chat_history_table.py
